[tool.poetry]
name = "blokus-rl"
version = "0.1.0"
description = ""
authors = ["Andreas Pirchner <andreas.pirchner1990@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<1.23"
gym = "^0.25.1"
pygame = "^2.1.2"
numba = "^0.56.0"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
